[metadata]
name = pyxq
version = attr: pyxq.__version__
url = https://github.com/goodchinas/pyxq
author = tim
author_email = goodchinas@qq.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
license = MIT license
description = python quant is so easy.
long_description_content_type = text/markdown
long_description = file: README.MD
keywords = pyxq
[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
where = .
include = pyxq*
exclude = tests*

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here

